@@ -25,13 +25,16 @@
  */
 package org.hyperic.hq.api.transfer.impl;
 
+import java.sql.SQLException;
 import java.text.ParseException;
 import java.util.ArrayList;
 import java.util.Calendar;
 import java.util.Date;
 import java.util.HashMap;
+import java.util.HashSet;
 import java.util.List;
 import java.util.Map;
+import java.util.Set;
 
 import org.hibernate.ObjectNotFoundException;
 import org.hyperic.hq.api.model.measurements.MeasurementRequest;
@@ -59,14 +62,15 @@ import org.hyperic.hq.measurement.shared.TemplateManager;
 import org.joda.time.format.DateTimeFormatter;
 import org.joda.time.format.ISODateTimeFormat;
 import org.springframework.beans.factory.annotation.Autowired;
+import org.springframework.transaction.annotation.Transactional;
 
 public class MeasurementTransferImpl implements MeasurementTransfer {
     private static final int MAX_DTPS = 400;
-	
+
     private MeasurementManager measurementMgr;
     private TemplateManager tmpltMgr;
-	private DataManager dataMgr; 
-	private MeasurementMapper mapper;
+    private DataManager dataMgr; 
+    private MeasurementMapper mapper;
     private ExceptionToErrorCodeMapper errorHandler ;
 
     @Autowired
@@ -79,7 +83,7 @@ public class MeasurementTransferImpl implements MeasurementTransfer {
         this.dataMgr = dataMgr;
         this.errorHandler = errorHandler;
     }
-    
+
     protected List<Measurement> getMeasurements(final String rscId, final List<MeasurementTemplate> tmps, final AuthzSubject authzSubject) throws PermissionException {
         // get measurements
         Map<Integer, List<Integer>> resIdsToTmpIds = new HashMap<Integer, List<Integer>>();
@@ -87,7 +91,7 @@ public class MeasurementTransferImpl implements MeasurementTransfer {
         for (MeasurementTemplate tmp : tmps) {
             tmpIds.add(tmp.getId());
         }
-        resIdsToTmpIds.put(new Integer(rscId), tmpIds);
+        resIdsToTmpIds.put(Integer.valueOf(rscId), tmpIds);
         Map<Resource, List<Measurement>> rscTohqMsmts = null;
         rscTohqMsmts = this.measurementMgr.findMeasurements(authzSubject, resIdsToTmpIds);
         if (rscTohqMsmts==null || rscTohqMsmts.size()==0 || rscTohqMsmts.values().isEmpty()) {
@@ -99,17 +103,17 @@ public class MeasurementTransferImpl implements MeasurementTransfer {
         }
         return hqMsmts;
     }
-    
+
     public MeasurementResponse getMetrics(ApiMessageContext apiMessageContext, final MeasurementRequest hqMsmtReq, 
             final String rscId, final Date begin, final Date end) 
-            throws ParseException, PermissionException, UnsupportedOperationException, ObjectNotFoundException, TimeframeBoundriesException, TimeframeSizeException {
+                    throws ParseException, PermissionException, UnsupportedOperationException, ObjectNotFoundException, TimeframeBoundriesException, TimeframeSizeException {
 
         MeasurementResponse res = new MeasurementResponse();
         if (hqMsmtReq==null || rscId==null || "".equals(rscId) 
                 || hqMsmtReq==null || hqMsmtReq.getMeasurementTemplateNames()==null || hqMsmtReq.getMeasurementTemplateNames().size()==0 
                 || begin==null || end==null) {
             throw new UnsupportedOperationException("Resource ID= " +rscId
-                            + hqMsmtReq!=null?", Measurements Names= "+ hqMsmtReq.getMeasurementTemplateNames():""
+                    + hqMsmtReq!=null?", Measurements Names= "+ hqMsmtReq.getMeasurementTemplateNames():""
                             + ", Message Body= " + hqMsmtReq
                             + ", Begin= " + begin
                             + ", End= " + end);
@@ -138,44 +142,100 @@ public class MeasurementTransferImpl implements MeasurementTransfer {
             res.add(msmt);
         }
         return res;
-     }
+    }
+
     
+    @Transactional(readOnly = true)
     public ResourceMeasurementBatchResponse getAggregatedMetricData(ApiMessageContext apiMessageContext,
-            ResourceMeasurementRequests hqMsmtReqs, Date begin, Date end)
-            throws PermissionException, UnsupportedOperationException, ObjectNotFoundException, TimeframeBoundriesException {
-        ResourceMeasurementBatchResponse res = new ResourceMeasurementBatchResponse(this.errorHandler);
-        if (hqMsmtReqs==null || hqMsmtReqs.getMeasurementRequests()==null || hqMsmtReqs.getMeasurementRequests().size()==0 || begin==null || end==null) {
-            throw new UnsupportedOperationException("the request is missing some essential details");
-        }
-        if (begin.after(end) || end.after(Calendar.getInstance().getTime())) {
-            throw new TimeframeBoundriesException("Begin= " +begin +", End=" +end);
-        }
-        
-        AuthzSubject authzSubject = apiMessageContext.getAuthzSubject();
-        // extract all input measurement templates
-        for (ResourceMeasurementRequest hqMsmtReq : hqMsmtReqs.getMeasurementRequests()) {
-            String rscId = hqMsmtReq.getRscId();
-            try {
-            if (rscId==null || "".equals(rscId)) {
-                throw new ObjectNotFoundException("no resource ID supplied",Resource.class.getName());
+            ResourceMeasurementRequests hqMsmtReqs, Date begin, Date end) throws TimeframeBoundriesException, PermissionException, SQLException, UnsupportedOperationException, ObjectNotFoundException {
+            ResourceMeasurementBatchResponse res = new ResourceMeasurementBatchResponse(this.errorHandler);
+            if (hqMsmtReqs==null || hqMsmtReqs.getMeasurementRequests()==null || hqMsmtReqs.getMeasurementRequests().size()==0 || begin==null || end==null) {
+                throw new UnsupportedOperationException("the request is missing some essential details");
             }
-            List<String> tmpNames = hqMsmtReq.getMeasurementTemplateNames();
-            List<MeasurementTemplate> tmps = this.tmpltMgr.findTemplatesByName(tmpNames);
-            if (tmps==null || tmps.size()==0) {
-                res.addFailedResource(rscId,ExceptionToErrorCodeMapper.ErrorCode.TEMPLATE_NOT_FOUND.getErrorCode(),null,new Object[] {});
-                continue;
+            if (begin.after(end) || end.after(Calendar.getInstance().getTime())) {
+                throw new TimeframeBoundriesException("Begin= " +begin +", End=" +end);
             }
-            List<Measurement> hqMsmts = getMeasurements(rscId, tmps,authzSubject);
+
+            AuthzSubject authzSubject = apiMessageContext.getAuthzSubject();
+            // extract all input measurement templates
+            Map<String,List<String>> tmpNameToRscs = new HashMap<String,List<String>>();
+            List<String> tmpNames = null;
+            String rscId = null;
+            for (ResourceMeasurementRequest hqMsmtReq : hqMsmtReqs.getMeasurementRequests()) {
+                rscId = hqMsmtReq.getRscId();
+                if (rscId==null || "".equals(rscId)) {
+                    throw new ObjectNotFoundException("no resource ID supplied",Resource.class.getName());
+                }
+                tmpNames = hqMsmtReq.getMeasurementTemplateNames();
+                for (String tmpName : tmpNames) {
+                    List<String> rscs = tmpNameToRscs.get(tmpName);
+                    if (rscs==null) {
+                        rscs = new ArrayList<String>(); 
+                        tmpNameToRscs.put(tmpName, rscs);
+                    }
+                    rscs.add(rscId);
+                }
+            }                
+            // extract tmp Ids per rsc        
+            List<MeasurementTemplate> tmps = this.tmpltMgr.findTemplatesByName(new ArrayList<String>(tmpNameToRscs.keySet())); // maybe change findTempl() to get set and save loop of arraylist creation
+            Map<Integer, List<Integer>> resIdsToTmpIds = new HashMap<Integer, List<Integer>>();
+            List<String> rscIds = null;
+            for (MeasurementTemplate tmp : tmps) {
+                rscIds = tmpNameToRscs.get(tmp.getName());
+                if (rscIds==null) { continue;   }
+                for (String _rscId : rscIds) {
+                    Integer rscIdInt = Integer.valueOf(_rscId);
+                    List<Integer> tmpIds = resIdsToTmpIds.get(rscIdInt);
+                    if (tmpIds==null) { // conversion to integer in one place / change rsc id to integer in req obj
+                        tmpIds = new ArrayList<Integer>(); 
+                        resIdsToTmpIds.put(rscIdInt,tmpIds );
+                    }
+                    tmpIds.add(tmp.getId());
+                }
+            }
+            // mark resources for which no measurements were found
+            final String TEMPLATE_NOT_FOUND_ERR_CODE = ExceptionToErrorCodeMapper.ErrorCode.TEMPLATE_NOT_FOUND.getErrorCode();
+            rscId = null;
+            for (ResourceMeasurementRequest hqMsmtReq : hqMsmtReqs.getMeasurementRequests()) {
+                // by now we know that all reqs are with valid rscs, o/w we wouldn't get here
+                rscId = hqMsmtReq.getRscId();
+                // if the requested rsc is not in the map of rscs for which at least one template was found, mark it as a failed rsc
+                if (!resIdsToTmpIds.keySet().contains(Integer.valueOf(rscId))) {
+                    res.addFailedResource(rscId,TEMPLATE_NOT_FOUND_ERR_CODE,null,new Object[] {}); // save error code as final out of the loop
+                }
+            }
+
+            Map<Resource, List<Measurement>> rscToHqMsmts = this.measurementMgr.findMeasurements(authzSubject, resIdsToTmpIds);
+            if (rscToHqMsmts==null || rscToHqMsmts.size()==0 || rscToHqMsmts.values().isEmpty()) {
+                throw new ObjectNotFoundException(tmps.toString(), Measurement.class.getName());
+            }
+            // validate that all rscs have msmts, and map msmt names to rscs
+            Map<Integer,Resource> msmtIdToRsc = new HashMap<Integer,Resource>();
+            Set<Measurement> allMsmts = new HashSet<Measurement>();
+            List<Measurement> msmts = null;
+            for (Map.Entry<Resource,List<Measurement>> rscToHqMsmtsEntry : rscToHqMsmts.entrySet()) {
+                Resource rsc = rscToHqMsmtsEntry.getKey();
+                msmts = rscToHqMsmtsEntry.getValue();
+                if (msmts==null || msmts.size()==0) {
+                    res.addFailedResource(String.valueOf(rsc.getId()),TEMPLATE_NOT_FOUND_ERR_CODE,null,new Object[] {});
+                } else {
+                    for (Measurement msmt : msmts) {
+                        msmtIdToRsc.put(msmt.getId(),rsc);
+                    }
+                    allMsmts.addAll(msmts);
+                }
+            }
             // sort msmts as per their IDs
             Map<Integer,Measurement> msmtIdToMsmt = new HashMap<Integer,Measurement>();
-            for (Measurement msmt : hqMsmts) {
+            for (Measurement msmt : allMsmts) {
                 msmtIdToMsmt.put(msmt.getId(), msmt);
             }
-            Map<Integer, double[]> msmtNamesToAgg = this.dataMgr.getAggregateDataAndAvailUpByMetric(hqMsmts, begin.getTime(), end.getTime());
-            
-            ResourceMeasurementResponse msmtRes = new ResourceMeasurementResponse(rscId);
+            Map<Integer, double[]> msmtNamesToAgg = this.dataMgr.getAggregateDataAndAvailUpByMetric(new ArrayList<Measurement>(allMsmts), begin.getTime(), end.getTime());
+            Map<Integer,ResourceMeasurementResponse> rscIdToRes = new HashMap<Integer,ResourceMeasurementResponse>();
+            Resource rsc = null;
             for (Map.Entry<Integer, double[]> msmtNameToAggEntry : msmtNamesToAgg.entrySet()) {
                 Integer msmtId = msmtNameToAggEntry.getKey();
+                rsc = msmtIdToRsc.get(msmtId);
                 double[] agg = msmtNameToAggEntry.getValue();
                 // no val for that msmt
                 if (agg==null || agg.length<=MeasurementConstants.IND_AVG) {
@@ -188,14 +248,15 @@ public class MeasurementTransferImpl implements MeasurementTransfer {
                     continue;
                 }
                 org.hyperic.hq.api.model.measurements.Measurement msmt = this.mapper.toMeasurement(hqMsmt,avg);
-                msmtRes.add(msmt);
+                
+                ResourceMeasurementResponse rscRes =  rscIdToRes.get(rsc.getId());
+                if (rscRes==null) {
+                    rscRes = new ResourceMeasurementResponse(String.valueOf(rsc.getId()));
+                    rscIdToRes.put(rsc.getId(), rscRes);
+                    res.addResponse(rscRes);
+                }
+                rscRes.add(msmt);
             }
-            res.addResponse(msmtRes);
-            }catch(Throwable t) { 
-                this.errorHandler.log(t) ; 
-                res.addFailedResource(t,rscId, null , null) ;
-            }
-        }
-        return res;
+            return res;
     }
 }
